started to work on Inventory

--- a/player/templates/player/inventory.html
+++ b/player/templates/player/inventory.html
@@ -26,8 +26,8 @@
                         <td></td><td>Head</td><td>Eyes</td>
                         <td></td><td>Neck</td><td></td>
                         <td></td><td>Armor</td><td></td>
-                        <td>LH</td><td>Pants</td><td>RH</td>
-                        <td></td><td>Shoes</td><td></td>
+                        <td>LH</td><td>Legs</td><td>RH</td>
+                        <td></td><td>Feet</td><td></td>
                     </tr>
                 </table>
             </td>
