re created database, did not know how to fix dumb error

--- a/player/templates/player/inventory.html
+++ b/player/templates/player/inventory.html
@@ -34,7 +34,7 @@
                         <td></td><td>Neck</td><td></td>
                     </tr>
                     <tr>
-                        <td>LH</td><td>Armor</td><td>RH</td>
+                        <td>LH</td><td>{{ equipment.}}</td><td>RH</td>
                     </tr>
                     <tr>
                         <td></td><td>Legs</td><td></td>
