Character creation process form

--- a/gm/templates/gm/createPlayerStep1.html
+++ b/gm/templates/gm/createPlayerStep1.html
@@ -5,7 +5,7 @@
     <title>Player Creation</title>
 </head>
 <body>
-    <form action="/gm/createPlayer" method="post">
+    <form action="/gm/createPlayer/1" method="post">
         {{ form.as_p }}
         <input type="submit" value="Submit">
     </form>
