Continuacion de creacion de personajes

--- a/gm/templates/gm/createPlayerStep1.html
+++ b/gm/templates/gm/createPlayerStep1.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <form action="/gm/createPlayer/1" method="post">
+        {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Submit">
     </form>
