--- a/gm/templates/gm/index.html
+++ b/gm/templates/gm/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 <a href="/gm/createPlayer">Create Player Character</a>
+<a href="/gm/createClass">Create Class</a>
 </body>
 </html>
